# zk-gaming-test-v1

./: Cargo.toml  README.md  app.js  index.html  styles.css
circuits/: Nargo.toml  Prover.toml  README.md
circuits/src/: main.nr
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: README.md  index.html
scripts/: deploy.sh
